; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/swapon/extr_swapon.c_usage.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/swapon/extr_swapon.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"usage: %s \00", align 1
@orig_prog = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"[-F fstab] -aLq | [-E] file ...\0A\00", align 1
@.str.2 = private unnamed_addr constant [28 x i8] c"[-F fstab] -aLq | file ...\0A\00", align 1
@.str.3 = private unnamed_addr constant [41 x i8] c"[-AghklmsU] [-a file ... | -d file ...]\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @usage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usage() #0 {
  %1 = load i32, i32* @stderr, align 4
  %2 = call i8* (...) @getprogname()
  %3 = call i32 (i32, i8*, ...) @fprintf(i32 %1, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %2)
  %4 = load i32, i32* @orig_prog, align 4
  switch i32 %4, label %14 [
    i32 128, label %5
    i32 129, label %8
    i32 130, label %11
  ]

5:                                                ; preds = %0
  %6 = load i32, i32* @stderr, align 4
  %7 = call i32 (i32, i8*, ...) @fprintf(i32 %6, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  br label %14

8:                                                ; preds = %0
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 (i32, i8*, ...) @fprintf(i32 %9, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0))
  br label %14

11:                                               ; preds = %0
  %12 = load i32, i32* @stderr, align 4
  %13 = call i32 (i32, i8*, ...) @fprintf(i32 %12, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.3, i64 0, i64 0))
  br label %14

14:                                               ; preds = %0, %11, %8, %5
  %15 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i8* @getprogname(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
